fixed a bug on mobile view

--- a/styles.css
+++ b/styles.css
@@ -367,7 +367,8 @@ footer p:nth-child(2){
     }
     .content{
         position: relative;
-    }
+		top: 10%;
+	 }
 	#about{
 		margin-top: 150px;
 	}
